[package]
name = "termlight"
version = "0.2.0"
authors = ["Kesavan Yogeswaran <hikes@google.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/kesyog/termlight"
documentation = "https://github.com/kesyog/termlight"
homepage = "https://github.com/kesyog/termlight"
keywords = ["light", "white"]
categories = ["command-line-utilities"]
description = "A cheap key/fill light replacement in the terminal"

[dependencies]
crossterm = "0.19.0"
