[package]
name = "termlight"
version = "1.0.0"
authors = ["Kesavan Yogeswaran <hikes@google.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/kesyog/termlight"
documentation = "https://github.com/kesyog/termlight"
homepage = "https://github.com/kesyog/termlight"
keywords = ["light", "white"]
categories = ["command-line-utilities"]
description = "Whiten up your terminal to use as a cheap key/fill light replacement for video conferencing"

[dependencies]
crossterm = "0.19.0"
